<resources>
    <string name="app_name">История компании Nike</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_chapters">Часть I</string>
    <string name="menu_chapters2">Часть II</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_setting">Настройки</string>
    <string name="menu_share">Поделится</string>
    <string name="menu_aboutUs">О нас</string>
    <string name="aboutUs">AboutUS</string>
    <string name="empty">empty</string>

</resources>