<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chapter1"
            android:icon="@drawable/ic_baseline_format_list_numbered_rtl_24"
            android:title="Введение"
            android:checked="true"/>
        <item
            android:id="@+id/nav_chapter2"
            android:icon="@drawable/ic_baseline_format_list_numbered_rtl_24"
            android:title="@string/menu_chapters" />
        <item
            android:id="@+id/nav_chapter3"
            android:icon="@drawable/ic_baseline_format_list_numbered_rtl_24"
            android:title="@string/menu_chapters2" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_miscellaneous_services_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/menu_aboutUs" />
    </group>
</menu>